# flatbot2026-python

./: .gitignore  Dockerfile  README.md  WIRING.md  docker-compose.yml  pyproject.toml  robot.py  robot_container.py
.github/workflows/: ci.yml
.wpilib/: wpilib_preferences.json
mechanisms/: mechanisms.py
vision/: vision.py
